# gedit_closebutton

./: CMakeLists.txt  HISTORY.md  README.md  closebutton.avprj  meson.build  meson_options.txt
data/: CMakeLists.txt  gedit_closebutton.plugin
data/local/: CMakeLists.txt
debian/: changelog  control  rules
doc/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in
rpmbuild/SPECS/: closebutton.spec
src/: CMakeLists.txt  Config.vala.base  Config.vala.cmake  closebutton.pc  closebutton.vala  gedit_closebutton.deps  gedit_closebutton.pc
